crates/vouched/tests/ui/vouched/named_struct.rs
use vouched::Vouched;

#[derive(Vouched)]
#[vouched(len(1..))]
struct NotVouched {
    a: i32,
}

fn main() {}
